2006-04-27  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppluginaction.[ch]: use a GParamSpecObject instead
	of GParamSpecPointer for the "procedure" property. Keep a reference
	on the action's procedure. Did a global s/proc/procedure/.

2006-04-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/warp.c: some cleanup, still a mess.

2006-04-27  Michael Natterer  <mitch@gimp.org>

	* app/actions/plug-in-commands.c (plug_in_repeat_cmd_callback):
	truncate the value array to the number of actually set parameters.

2006-04-27  Michael Natterer  <mitch@gimp.org>

	* app/Makefile.am (SUBDIRS): changed order of subdirs to match the
	bottom-up module dependency order more closely.

2006-04-27  Michael Natterer  <mitch@gimp.org>

	* configure.in: use G_DISABLE_DEPRECATED also when building
	against glib 2.10

2006-04-27  Michael Natterer  <mitch@gimp.org>

	* app/menus/menus.c: namespace cleanup: renamed
	menu_can_change_accels() to menus_can_change_accels().

2006-04-26  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (depth_first_search): added newlines.

	* app/core/gimpimage-contiguous-region.c: added const qualifiers.

2006-04-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/unsharp.c: use gimp_progress_set_text() instead
	of gimp_progress_init() to change the progress text.

2006-04-26  Sven Neumann  <sven@gimp.org>

	* app/actions/vectors-commands.c
	(vectors_selection_to_vectors_cmd_callback): do not pass an
	invalid drawable to the plug-in, just omit the argument.
	Fixes bug #339759.

2006-04-26  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-funcs.c: code cleanup, moved variables into
	local scopes, added const qualifiers.

2006-04-26  Michael Natterer  <mitch@gimp.org>

	* app/pdb/Makefile.am
	* app/pdb/pdb-types.h
	* app/pdb/gimppdb.[ch]: new object GimpPDB which keeps all
	procedures and functions to register and run them. Renamed all
	functions and did some cleanups.

	* app/pdb/gimp-pdb.[ch]